fix toolbar rtl: default position shouldn't be ignored, and we should add positioning for [data-align='left'] as well so that it's mirrored correctly

--- a/editor/components/block-list/style.scss
+++ b/editor/components/block-list/style.scss
@@ -868,7 +868,6 @@
 
 	// This prevents floats from messing up the position.
 	position: absolute;
-	/*!rtl:ignore*/
 	left: 0;
 
 	.editor-block-list__block[data-align="right"] & {
@@ -877,6 +876,14 @@
 		right: 0;
 		/*!rtl:end:ignore*/
 	}
+
+	.editor-block-list__block[data-align="left"] & {
+		/*!rtl:begin:ignore*/
+		right: auto;
+		left: 0;
+		/*!rtl:end:ignore*/
+	}
+
 
 	@include break-small() {
 		width: auto;
